--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# elm-package generated files
+node_modules
 elm-stuff
-# elm-repl generated files
-repl-temp-*
+elm.js
+Auth.elm
+generated-code
+build-artifacts
+*.log
